Limit width of summary column, overflow with ...

--- a/message-index/app.sass
+++ b/message-index/app.sass
@@ -12,3 +12,10 @@ tr.message td:not(.summary), code
 
 tr.message td:last-child
     text-align: right
+
+tr.message td.summary
+    display: block
+    width: 30em
+    overflow: hidden
+    text-overflow: ellipsis
+    white-space: nowrap
