--- a/message-index/css/default.css
+++ b/message-index/css/default.css
@@ -211,4 +211,12 @@ tr.message td:last-child {
   text-align: right;
 }
 
+tr.message td.summary {
+  display: block;
+  width: 30em;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 /*# sourceMappingURL=default.css.map */
