B612 for example code in examples on transparent.

--- a/message-index/app.sass
+++ b/message-index/app.sass
@@ -4,7 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|B612|B612+Mono&display=swap')
 
-tr.message td:not(.summary), code
+tr.message td:not(.summary), code, pre code
     font-family: 'B612 Mono', monospace
     font-size: 0.8em
 
@@ -17,3 +17,6 @@ tr.message td.summary
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
+
+code.language-haskell.hljs
+    background-color: transparent
