--- a/message-index/css/default.css
+++ b/message-index/css/default.css
@@ -160,8 +160,6 @@ article .header {
 }
 
 main pre code {
-  background-color: #fafafa;
-  font-family: monospace;
   display: inline-block;
   padding: 10px;
 }
@@ -202,7 +200,7 @@ table pre {
   margin: 0;
 }
 
-tr.message td:not(.summary), code {
+tr.message td:not(.summary), code, pre code {
   font-family: "B612 Mono", monospace;
   font-size: 0.8em;
 }
@@ -217,6 +215,10 @@ tr.message td.summary {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+code.language-haskell.hljs {
+  background-color: transparent;
 }
 
 /*# sourceMappingURL=default.css.map */
