--- a/message-index/css/default.css
+++ b/message-index/css/default.css
@@ -1,5 +1,12 @@
 html {
   font-size: 62.5%;
+  font-family: Helvetica, sans-serif;
+}
+
+*:focus-visible {
+  outline-offset: 4px;
+  outline-width: 1px;
+  outline-color: #DB83ED;
 }
 
 body {
@@ -52,6 +59,8 @@ article .header {
   color: #000;
   text-decoration: none;
 }
+
+/* Responsive */
 
 @media (max-width: 319px) {
   body {
@@ -163,7 +172,7 @@ article .header {
 }
 
 main pre code {
-  background-color: #fafafa;
+  background-color: #FAFAFA;
   padding: 10px;
 }
 
@@ -175,11 +184,11 @@ main code {
   padding-right: 2px;
 }
 
-nav#breadcrumb {
+nav.breadcrumb {
   text-align: right;
 }
 
-nav#breadcrumb a {
+nav.breadcrumb a {
   font-weight: normal;
   color: black;
   text-decoration: underline;
@@ -195,7 +204,7 @@ nav#breadcrumb a {
 }
 
 .filename {
-  background-color: #eaeaea;
+  background-color: #EAEAEA;
   padding-left: 5px;
 }
 
@@ -205,6 +214,10 @@ nav#breadcrumb a {
 
 table pre {
   margin: 0;
+}
+
+table tbody td {
+  padding: 5px;
 }
 
 details {
@@ -227,7 +240,18 @@ summary {
   font-size: small;
 }
 
+/* Filter input */
+
 .single_flt {
   width: 100%;
   margin-bottom: 10px;
+  padding: 10px;
+  appearance: none;
+  border-radius: 0;
+  border: 2px solid #DB83ED;
+}
+
+/* Utilities */
+.nowrap {
+  white-space: nowrap;
 }
