--- a/message-index/templates/example.html
+++ b/message-index/templates/example.html
@@ -2,18 +2,6 @@ $body$
 
 <table width="100%">
   $for(files)$
-  <tr><td colspan="2" class="filename"><pre>$name$</pre></td></tr>
-  <tr>
-    <td width="50%" class="beforeafter">Before</td>
-    <td width="50%" class="beforeafter">After</td>
-  </tr>
-  <tr>
-    <td>
-      <pre><code class="language-haskell">$before$</code></pre>
-    </td>
-    <td>
-      <pre><code class="language-haskell">$after$</code></pre>
-    </td>
-  </tr>
+    $diff$
   $endfor$
 </table>
